tests/NormalTests/paczka1/small_fuzzy/76542320.err
Error in line 2: S786 S343 66,8
Error in line 8: YiOLtZj S786 1,4
Error in line 1: Ae6Fu S343 12,4
